--- a/client/style/style.css
+++ b/client/style/style.css
@@ -160,3 +160,9 @@ a{color:inherit;text-decoration:none}
 .foot-lnk{
 	text-align:center;
 }
+
+#map-canvas{
+	position:center;
+	height: 400px;
+	width: 700px;
+}
