--- a/client/style/style.css
+++ b/client/style/style.css
@@ -1,13 +1,13 @@
 html, body{
 	margin:0;
 	 overflow-x:hidden;
-	background:#c8c8c8;
+	/*background:#c8c8c8;*/
 	font:600 16px/18px 'Open Sans',sans-serif;
 	width:100%;
 }
 
 #custom-bootstrap-menu{
-	background-color: #7B003A;
+	/*background-color: #7B003A;*/
 	
 }
 
@@ -34,11 +34,83 @@ html, body{
 .img-left {
 
 	margin: 0 0 0 0;  
-	padding: 15;
+	padding: 15 100;
 	float: right; 
-	width: 240;
+	width: 850	;
+	height: 220
 }
 footer {
 	background-color: #7B003A;
 	color: #fff
+}
+#map{
+	padding: 15 0 0 50
+}
+/*login*/
+@media (min-width: 768px) {
+
+    .omb_row-sm-offset-3 div:first-child[class*="col-"] {
+      margin-left: 25%;
+    }
+  }
+
+  .omb_login .omb_authTitle {
+    text-align: center;
+    line-height: 100%;
+  }
+
+  .omb_login .omb_socialButtons a {
+    color: #C8962D; // In yourUse @body-bg 
+    opacity:0.9;
+  }
+  .omb_login .omb_socialButtons a:hover {
+    color: #C8962D;
+    opacity:1;      
+  }
+  
+
+  .omb_login .omb_loginOr {
+    position: relative;
+    font-size: 1.5em;
+    color: #aaa;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+  }
+  .omb_login .omb_loginOr .omb_hrOr {
+    background-color: #C8962D;
+    height: 1px;
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+  }
+  .omb_login .omb_loginOr .omb_spanOr {
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: -0.6em;
+    margin-left: -1.5em;
+    background-color: white;
+    width: 3em;
+    text-align: center;
+  }     
+
+  .omb_login .omb_loginForm .input-group.i {
+    width: 2em;
+  }
+  .omb_login .omb_loginForm  .help-block {
+    color: red;
+  }
+
+  @media (min-width: 768px) {
+    .omb_login .omb_forgotPwd {
+      text-align: right;
+      margin-top:10px;
+    }   
+  }
+.head{
+	margin-left: 0
+}
+#custom-bootstrap-menu{
+	margin-bottom: 0
 }
